infrastructure/kitos-dev/kitos/services/kitos-pubsub-2/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kitos-pubsub-2
  namespace: kitos
spec:
  ports:
  - appProtocol: http
    name: http
    port: 7226
    protocol: TCP
    targetPort: 8080
  selector:
    app: kitos-pubsub-2
  type: ClusterIP
