infrastructure/kitos-dev/kitos/services/kitos-pubsub-2/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: easy-hosting-issuer
  name: kitos-pubsub-2
  namespace: kitos
spec:
  rules:
  - host: kitos-pubsub.strongminds.tech
    http:
      paths:
      - backend:
          service:
            name: kitos-pubsub-2
            port:
              name: http
        path: /
        pathType: Prefix
  - host: 38693b73-57a3-4209-bea0-06215de53e07.kitos-dev.strongminds.easyhosting.strongminds.dev
    http:
      paths:
      - backend:
          service:
            name: kitos-pubsub-2
            port:
              name: http
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - kitos-pubsub.strongminds.tech
    secretName: kitos-pubsub-strongminds-tech-tls
  - hosts:
    - 38693b73-57a3-4209-bea0-06215de53e07.kitos-dev.strongminds.easyhosting.strongminds.dev
    secretName: 38693b73-57a3-4209-bea0-06215de53e07-kitos-dev-strongminds-easyhosting-strongminds-dev-tls
